// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrencyFormat custom precision 1`] = `
CurrencyFormat {
  "decimalSymbol": ",",
  "groupingSymbol": ".",
  "maximumFractionDigits": 0,
  "minimumFractionDigits": 0,
  "minusSymbol": "-",
  "negativePrefix": "-",
  "prefix": "",
  "suffix": " €",
}
`;

exports[`CurrencyFormat custom precision 2`] = `
CurrencyFormat {
  "decimalSymbol": ",",
  "groupingSymbol": ".",
  "maximumFractionDigits": 0,
  "minimumFractionDigits": 0,
  "minusSymbol": "-",
  "negativePrefix": "-",
  "prefix": "",
  "suffix": " €",
}
`;

exports[`CurrencyFormat custom precision 3`] = `
CurrencyFormat {
  "decimalSymbol": ",",
  "groupingSymbol": ".",
  "maximumFractionDigits": 2,
  "minimumFractionDigits": 0,
  "minusSymbol": "-",
  "negativePrefix": "-",
  "prefix": "",
  "suffix": "",
}
`;

exports[`CurrencyFormat custom precision 4`] = `
CurrencyFormat {
  "decimalSymbol": ",",
  "groupingSymbol": ".",
  "maximumFractionDigits": 2,
  "minimumFractionDigits": 0,
  "minusSymbol": "-",
  "negativePrefix": "-",
  "prefix": "",
  "suffix": " €",
}
`;

exports[`CurrencyFormat custom precision 5`] = `
CurrencyFormat {
  "decimalSymbol": undefined,
  "groupingSymbol": ",",
  "maximumFractionDigits": 0,
  "minimumFractionDigits": 0,
  "minusSymbol": "-",
  "negativePrefix": "-￥",
  "prefix": "￥",
  "suffix": "",
}
`;

exports[`CurrencyFormat custom prefix/suffix 1`] = `
CurrencyFormat {
  "decimalSymbol": ",",
  "groupingSymbol": ".",
  "maximumFractionDigits": 2,
  "minimumFractionDigits": 2,
  "minusSymbol": "-",
  "negativePrefix": "-₿ ",
  "prefix": "₿ ",
  "suffix": "",
}
`;

exports[`CurrencyFormat custom prefix/suffix 2`] = `
CurrencyFormat {
  "decimalSymbol": ",",
  "groupingSymbol": ".",
  "maximumFractionDigits": 2,
  "minimumFractionDigits": 2,
  "minusSymbol": "-",
  "negativePrefix": "-",
  "prefix": "",
  "suffix": " Euro",
}
`;

exports[`CurrencyFormat custom prefix/suffix 3`] = `
CurrencyFormat {
  "decimalSymbol": ",",
  "groupingSymbol": ".",
  "maximumFractionDigits": 2,
  "minimumFractionDigits": 2,
  "minusSymbol": "-",
  "negativePrefix": "-",
  "prefix": "",
  "suffix": "",
}
`;

exports[`CurrencyFormat i18n de-DE_EUR 1`] = `
CurrencyFormat {
  "decimalSymbol": ",",
  "groupingSymbol": ".",
  "maximumFractionDigits": 2,
  "minimumFractionDigits": 2,
  "minusSymbol": "-",
  "negativePrefix": "-",
  "prefix": "",
  "suffix": " €",
}
`;

exports[`CurrencyFormat i18n en-GB_GBP 1`] = `
CurrencyFormat {
  "decimalSymbol": ".",
  "groupingSymbol": ",",
  "maximumFractionDigits": 2,
  "minimumFractionDigits": 2,
  "minusSymbol": "-",
  "negativePrefix": "-£",
  "prefix": "£",
  "suffix": "",
}
`;

exports[`CurrencyFormat i18n en-IN_INR 1`] = `
CurrencyFormat {
  "decimalSymbol": ".",
  "groupingSymbol": ",",
  "maximumFractionDigits": 2,
  "minimumFractionDigits": 2,
  "minusSymbol": "-",
  "negativePrefix": "-₹",
  "prefix": "₹",
  "suffix": "",
}
`;

exports[`CurrencyFormat i18n en-US_USD 1`] = `
CurrencyFormat {
  "decimalSymbol": ".",
  "groupingSymbol": ",",
  "maximumFractionDigits": 2,
  "minimumFractionDigits": 2,
  "minusSymbol": "-",
  "negativePrefix": "-$",
  "prefix": "$",
  "suffix": "",
}
`;

exports[`CurrencyFormat i18n es-ES_EUR 1`] = `
CurrencyFormat {
  "decimalSymbol": ",",
  "groupingSymbol": ".",
  "maximumFractionDigits": 2,
  "minimumFractionDigits": 2,
  "minusSymbol": "-",
  "negativePrefix": "-",
  "prefix": "",
  "suffix": " €",
}
`;

exports[`CurrencyFormat i18n ja_JPY 1`] = `
CurrencyFormat {
  "decimalSymbol": undefined,
  "groupingSymbol": ",",
  "maximumFractionDigits": 0,
  "minimumFractionDigits": 0,
  "minusSymbol": "-",
  "negativePrefix": "-￥",
  "prefix": "￥",
  "suffix": "",
}
`;

exports[`CurrencyFormat i18n nl-NL_EUR 1`] = `
CurrencyFormat {
  "decimalSymbol": ",",
  "groupingSymbol": ".",
  "maximumFractionDigits": 2,
  "minimumFractionDigits": 2,
  "minusSymbol": "-",
  "negativePrefix": "€ -",
  "prefix": "€ ",
  "suffix": "",
}
`;

exports[`CurrencyFormat i18n pt_BRL 1`] = `
CurrencyFormat {
  "decimalSymbol": ",",
  "groupingSymbol": ".",
  "maximumFractionDigits": 2,
  "minimumFractionDigits": 2,
  "minusSymbol": "-",
  "negativePrefix": "-R$ ",
  "prefix": "R$ ",
  "suffix": "",
}
`;

exports[`CurrencyFormat i18n zh_CNY 1`] = `
CurrencyFormat {
  "decimalSymbol": ".",
  "groupingSymbol": ",",
  "maximumFractionDigits": 2,
  "minimumFractionDigits": 2,
  "minusSymbol": "-",
  "negativePrefix": "-¥",
  "prefix": "¥",
  "suffix": "",
}
`;
